🔧 Handle landing page gotchas

--- a/styles.scss
+++ b/styles.scss
@@ -22,6 +22,8 @@ main {
 form {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  max-width: 75rem;
+  width: 100%;
 
   > div {
     padding: 0 0.5rem;
