--- a/styles.scss
+++ b/styles.scss
@@ -7,6 +7,7 @@ html {
 }
 
 body {
+  font-family: Arial, Helvetica, sans-serif;
   padding: 0;
   margin: 0;
 }
@@ -26,8 +27,15 @@ form {
   width: 100%;
 
   > div {
-    padding: 0 0.5rem;
-    text-align: center;
+    padding: 0 0.15rem;
+    text-align: left;
+
+    > h2 {
+      background-color: #cc8229;
+      color: white;
+      padding: 0.25rem;
+      text-transform: uppercase;
+    }
 
     > input:not(:last-child) {
       margin-bottom: 1rem;
